fixed navtrays being too low when open on 768-979px breakpoints

--- a/src/packages/modules/global-header-footer/css/_responsive-navbar.scss
+++ b/src/packages/modules/global-header-footer/css/_responsive-navbar.scss
@@ -140,8 +140,6 @@
 
 
 
-
-
 // ------------------------------------------------
 // LARGE DESKTOP
 // ------------------------------------------------
@@ -339,7 +337,9 @@
 .navmenu-w {
   top: $navbarHeightShort;
 }
-.navtray-w-visible {
+.navtray-w-visible,
+.navtray-w-tall.navtray-w-visible,
+.navtray-w-short.navtray-w-visible{
   top: $navbarHeightShort;
 }
 .nav-primary {
@@ -479,7 +479,6 @@
     left: 25px;
   }
 }
-
 
 
 .navtray-section-featured { // section right
